fixed white space on splash page

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -8,6 +8,11 @@
 
 }
 
+html {
+  padding: 0px;
+  margin: 0px;
+}
+
 body {
   background-color: #e3e3e3;
   font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
